:bug: fix the alignment

--- a/custom_cv.css
+++ b/custom_cv.css
@@ -60,3 +60,7 @@
     margin-top: 0;
     margin-bottom: 1em;
   }
+
+  .likesectionHead {
+    text-align: center;
+  }
